--- a/apply.html
+++ b/apply.html
@@ -30,12 +30,12 @@
         <div class="pa-top-header">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="pa-header-address">
-                            <p><span>Address:</span> 25 LNB Devonshire Street London W1G 7AE</p>
+                           <p><span>Address:</span> National Highway-58, Yoga Gram Road Near Bahardrabad, Haridwar Maharishi, Aurangabad, Uttarakhand 249405</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="pa-header-call">
                             <p>Emergency Call :<span> +001 4567891236</span></p>
                         </div>
@@ -121,21 +121,21 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="pa-contact-box">
                             <h4>Address</h4>
-                            <p>25 LNB Devonshire Street London W1G 7AE</p>
+                            <p>National Highway-58, Yoga Gram Road Near Bahardrabad, Haridwar Maharishi, Aurangabad, Uttarakhand 249405</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="pa-contact-box">
                             <h4>Contant no.</h4>
                             <p>+001 4567891236</p>
-                            <p>+001 7894561230</p>
+                            
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="pa-contact-box">
                             <h4>Email</h4>
-                            <p>support@pureaurveda.com</p>
-                            <p>support.pureaurveda@gmail.com</p>
+                            <p>info@patanjaliyoga.com</p>
+                           
                         </div>
                     </div>
                 </div>
