--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div class="pa-top-header">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <div class="pa-header-address">
-                            <p><span>Address:</span> 25 LNB Devonshire Street London W1G 7AE</p>
+                            <p><span>Address:</span> National Highway-58, Yoga Gram Road Near Bahardrabad, Haridwar Maharishi, Aurangabad, Uttarakhand 249405</p>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <div class="pa-header-call">
                             <p>Emergency Call :<span> +001 4567891236</span></p>
                         </div>
