--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patanjali Yoga</title>
+    <title>Patanjali Yoga Upcchar</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/font.css">
@@ -37,7 +37,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="pa-header-call">
-                            <p>Emergency Call :<span> +001 4567891236</span></p>
+                            <p>Emergency Call :<span> +91 7656801664</span></p>
                         </div>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
                     <div class="col-md-3 col-6">
                         <div class="pa-logo">
                             <a href="index.html" style="text-decoration: none;">
-                                <h3 style="color: #fff;">Patanjali Yoga</h3>
+                                <h3 style="color: #fff;">Patanjali Yoga Upcchar</h3>
                             </a>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                     <div class="col-lg-6">
                         <div class="pa-foot-box pa-foot-subscribe">
                             <a href="index.html" style="text-decoration: none;">
-                                <h3 style="color: #fff;">Patanjali Yoga</h3>
+                                <h3 style="color: #fff;">Patanjali Yoga Upcchar</h3>
                             </a>
                            
                             <p>There are various steps in Baba Ramdev Pranayam that will help you reap the same benefits that regular yoga will help you achieve.</p>
@@ -262,7 +262,7 @@
         <!-- copyright start -->
         <div class="pa-copyright">
             <div class="container">
-                <p>Copyright &copy; 2022. All right reserved. <a href="index.html">Patanjali yoga</a></p>
+                <p>Copyright &copy; 2022. All right reserved. <a href="index.html">Patanjali Yoga Upcchar</a></p>
             </div>
         </div>
         <!-- copyright end -->
