--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6">
                         <div class="pa-medicine-box">
-                            <img src="assets/images/health.jpg" alt="image" class="img-fluid" />
+                            <img src="assets/images/yoga_hs.jpeg" alt="image" class="img-fluid" />
                             <h2><a href="javascript:void(0)">Health</a></h2>
                            
                             <p>Patanjali Ayurveda Hospital is attached with Patanjali Bhartiya Ayurvigyan avam Anusandhan Sansthan (Patanjali Ayurveda College). Patanjali Ayurved Chikitsalaya has world’s largest O.P.D. of capacity of six to ten thousand patients per day.</p>
