--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                     <div class="col-md-3 col-6">
                         <div class="pa-logo">
                             <a href="index.html" style="text-decoration: none;">
-                                <h3 style="color: #fff;">Patanjali Yoga Upcchar</h3>
+                                <h3 style="color: #fff;">Patanjali Yoga </h3>
                             </a>
                         </div>
                     </div>
